# hexlet-django-blog

./: Makefile  pyproject.toml
hexlet_django_blog/: settings.py
