[tool.poetry]
name = "hexlet_django_blog"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"
# classifiers = []
# repository = ""
# packages = [
# { include = ""},
# ]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
flask = "^3.0.3"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
validators = "^0.28.3"
django = "^5.0.6"
django-admin = "^2.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
